# uhntiss

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: corpus.md  mac-handoff.md  spec.md
eval/: baseline_ableton.py  run_eval.py  taste_review.py
mouthflow/: __init__.py  capture.py  classify.py  cli.py  execute.py  plan.py  schemas.py  transcribe.py
mouthflow/prompts/: plan.md
tests/: README.md  test_capture.py  test_e2e.py  test_execute.py  test_plan.py  test_transcribe.py
