[project]
name = "mouthflow"
version = "0.1.0"
description = "A voice-driven arrangement agent for Ableton Live."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.13"
authors = [{ name = "Rene", email = "rene@pellicer.dk" }]
dependencies = [
    "sounddevice==0.4.7",
    "soundfile==0.12.1",
    "librosa==0.10.2.post1",
    "numpy==1.26.4",
    "scipy==1.13.1",
    "mido==1.3.2",
    "anthropic==0.39.0",
    "pydantic==2.9.2",
    "typer==0.12.5",
]

[project.scripts]
mouthflow = "mouthflow.cli:app"

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mouthflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
